prusti-tests/tests/verify_overflow/ui/counterexamples/model-2.stderr
error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/model-2.rs:31:11
   |
31 | #[ensures(v.model().last_pushed == 5)]
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the error originates here
  --> $DIR/model-2.rs:32:1
   |
32 | fn test(v: VecWrapper<i32>){}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: counterexample for "v"
       value:   VecWrapper_model {
            last_pushed: 2,
        }
  --> $DIR/model-2.rs:32:9
   |
32 | fn test(v: VecWrapper<i32>){}
   |         ^
note: counterexample for "result"
       value:   ()
  --> $DIR/model-2.rs:32:28
   |
32 | fn test(v: VecWrapper<i32>){}
   |                            ^^

error: aborting due to previous error

